// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E should be neat 2`] = `
"{
  "generatedAt": "2024-10-15T00:00:00.000Z",
  "potoVersion": "0.2.0",
  "metrics": {
    "cumulatedLightIntegrationMinutes": 9,
    "cumulatedDarksIntegrationMinutes": 11,
    "totalLights": 8,
    "totalDarks": 10,
    "totalFlats": 12,
    "totalBiases": 12
  },
  "layerSets": [
    {
      "layerSetId": "Light_60.0s_Bin1_H_gain0",
      "filter": "H",
      "lightSequences": [
        {
          "sequenceId": "20240625-010850",
          "count": 3,
          "integrationMinutes": 3
        }
      ],
      "lightTotalCount": 3,
      "lightTotalIntegrationMinutes": 3,
      "lights": [
        {
          "setName": "Light_60.0s_Bin1_H_gain0",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "H",
          "gain": 0,
          "sequenceId": "20240625-010850",
          "sequencePosition": 1,
          "datetime": "2024-06-25T01:08:50.000Z",
          "temperature": "-10.1C",
          "fileName": "Light_FOV_60.0s_Bin1_H_gain0_20240625-010850_-10.1C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_H_gain0_20240625-010850_-10.1C_0001.fit",
          "projectDirectory": "tmp/project/H/Light_60.0s_Bin1_H_gain0"
        },
        {
          "setName": "Light_60.0s_Bin1_H_gain0",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "H",
          "gain": 0,
          "sequenceId": "20240625-010850",
          "sequencePosition": 2,
          "datetime": "2024-06-25T01:08:51.000Z",
          "temperature": "-10.1C",
          "fileName": "Light_FOV_60.0s_Bin1_H_gain0_20240625-010851_-10.1C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_H_gain0_20240625-010851_-10.1C_0002.fit",
          "projectDirectory": "tmp/project/H/Light_60.0s_Bin1_H_gain0"
        },
        {
          "setName": "Light_60.0s_Bin1_H_gain0",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "H",
          "gain": 0,
          "sequenceId": "20240625-010850",
          "sequencePosition": 3,
          "datetime": "2024-06-25T01:08:52.000Z",
          "temperature": "-10.1C",
          "fileName": "Light_FOV_60.0s_Bin1_H_gain0_20240625-010852_-10.1C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_H_gain0_20240625-010852_-10.1C_0003.fit",
          "projectDirectory": "tmp/project/H/Light_60.0s_Bin1_H_gain0"
        }
      ],
      "flatSet": "Flat_1.0ms_Bin1_H_gain100",
      "flatSequenceId": "20240511-094306",
      "flatsCount": 3,
      "flats": [
        {
          "setName": "Flat_1.0ms_Bin1_H_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "H",
          "gain": 100,
          "sequenceId": "20240511-094306",
          "sequencePosition": 1,
          "datetime": "2024-05-11T09:43:06.000Z",
          "temperature": "-10.5C",
          "fileName": "Flat_1.0ms_Bin1_H_gain100_20240511-094306_-10.5C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094306_-10.5C_0001.fit",
          "projectDirectory": "tmp/project/H/Flat_1.0ms_Bin1_H_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_H_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "H",
          "gain": 100,
          "sequenceId": "20240511-094306",
          "sequencePosition": 2,
          "datetime": "2024-05-11T09:43:07.000Z",
          "temperature": "-10.5C",
          "fileName": "Flat_1.0ms_Bin1_H_gain100_20240511-094307_-10.5C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094307_-10.5C_0002.fit",
          "projectDirectory": "tmp/project/H/Flat_1.0ms_Bin1_H_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_H_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "H",
          "gain": 100,
          "sequenceId": "20240511-094306",
          "sequencePosition": 3,
          "datetime": "2024-05-11T09:43:08.000Z",
          "temperature": "-10.5C",
          "fileName": "Flat_1.0ms_Bin1_H_gain100_20240511-094308_-10.5C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094308_-10.5C_0003.fit",
          "projectDirectory": "tmp/project/H/Flat_1.0ms_Bin1_H_gain100"
        }
      ],
      "darkSet": "Dark_60.0s_Bin1_gain0",
      "darksCount": 1,
      "darkTotalIntegrationMinutes": 1,
      "darks": [
        {
          "setName": "Dark_60.0s_Bin1_gain0",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": null,
          "gain": 0,
          "sequenceId": "20240308-155722",
          "sequencePosition": 1,
          "datetime": "2024-03-08T15:57:22.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_60.0s_Bin1_gain0_20240308-155722_-10.0C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_gain0_20240308-155722_-10.0C_0001.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain0"
        }
      ],
      "biasSet": "Bias_1.0ms_Bin1_gain100",
      "biasesCount": 3,
      "biases": [
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 1,
          "datetime": "2023-09-10T10:11:31.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 2,
          "datetime": "2023-09-10T10:11:32.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 3,
          "datetime": "2023-09-10T10:11:33.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        }
      ]
    },
    {
      "layerSetId": "Light_60.0s_Bin1_S_gain100__20240624-010840",
      "filter": "S",
      "lightSequences": [
        {
          "sequenceId": "20240624-010840",
          "count": 3,
          "integrationMinutes": 3
        }
      ],
      "lightTotalCount": 3,
      "lightTotalIntegrationMinutes": 3,
      "lights": [
        {
          "setName": "Light_60.0s_Bin1_S_gain100",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-010840",
          "sequencePosition": 1,
          "datetime": "2024-06-24T01:08:40.000Z",
          "temperature": "-10.1C",
          "fileName": "Light_FOV_60.0s_Bin1_S_gain100_20240624-010840_-10.1C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_S_gain100_20240624-010840_-10.1C_0001.fit",
          "projectDirectory": "tmp/project/S/Light_60.0s_Bin1_S_gain100"
        },
        {
          "setName": "Light_60.0s_Bin1_S_gain100",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-010840",
          "sequencePosition": 2,
          "datetime": "2024-06-24T01:08:41.000Z",
          "temperature": "-10.1C",
          "fileName": "Light_FOV_60.0s_Bin1_S_gain100_20240624-010841_-10.1C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_S_gain100_20240624-010841_-10.1C_0002.fit",
          "projectDirectory": "tmp/project/S/Light_60.0s_Bin1_S_gain100"
        },
        {
          "setName": "Light_60.0s_Bin1_S_gain100",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-010840",
          "sequencePosition": 3,
          "datetime": "2024-06-24T01:08:42.000Z",
          "temperature": "-10.1C",
          "fileName": "Light_FOV_60.0s_Bin1_S_gain100_20240624-010842_-10.1C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_S_gain100_20240624-010842_-10.1C_0003.fit",
          "projectDirectory": "tmp/project/S/Light_60.0s_Bin1_S_gain100"
        }
      ],
      "flatSet": "Flat_1.0ms_Bin1_S_gain100",
      "flatSequenceId": "20240624-094304",
      "flatsCount": 3,
      "flats": [
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-094304",
          "sequencePosition": 1,
          "datetime": "2024-06-24T09:43:04.000Z",
          "temperature": "-10.5C",
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240624-094304_-10.5C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240624-094304_-10.5C_0001.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-094304",
          "sequencePosition": 2,
          "datetime": "2024-06-24T09:43:05.000Z",
          "temperature": "-10.0C",
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240624-094305_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240624-094305_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240624-094304",
          "sequencePosition": 3,
          "datetime": "2024-06-24T09:43:06.000Z",
          "temperature": "-10.5C",
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240624-094306_-10.5C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240624-094306_-10.5C_0003.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        }
      ],
      "darkSet": "Dark_60.0s_Bin1_L_gain100",
      "darksCount": 4,
      "darkTotalIntegrationMinutes": 4,
      "darks": [
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 1,
          "datetime": "2024-03-08T15:57:22.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 2,
          "datetime": "2024-03-08T15:57:23.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 3,
          "datetime": "2024-03-08T15:57:24.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 4,
          "datetime": "2024-03-08T15:57:25.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        }
      ],
      "biasSet": "Bias_1.0ms_Bin1_gain100",
      "biasesCount": 3,
      "biases": [
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 1,
          "datetime": "2023-09-10T10:11:31.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 2,
          "datetime": "2023-09-10T10:11:32.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 3,
          "datetime": "2023-09-10T10:11:33.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        }
      ]
    },
    {
      "layerSetId": "Light_120.0s_Bin1_S_gain0__20240626-010853",
      "filter": "S",
      "lightSequences": [
        {
          "sequenceId": "20240626-010853",
          "count": 1,
          "integrationMinutes": 2
        }
      ],
      "lightTotalCount": 1,
      "lightTotalIntegrationMinutes": 2,
      "lights": [
        {
          "setName": "Light_120.0s_Bin1_S_gain0",
          "type": "Light",
          "bulb": "120.0s",
          "bulbMs": 120000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 0,
          "sequenceId": "20240626-010853",
          "sequencePosition": 1,
          "datetime": "2024-06-26T01:08:53.000Z",
          "temperature": "-10.1C",
          "fileName": "Light_FOV_120.0s_Bin1_S_gain0_20240626-010853_-10.1C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Light/FOV/Light_FOV_120.0s_Bin1_S_gain0_20240626-010853_-10.1C_0001.fit",
          "projectDirectory": "tmp/project/S/Light_120.0s_Bin1_S_gain0"
        }
      ],
      "flatSet": "Flat_1.0ms_Bin1_S_gain100",
      "flatSequenceId": "20240626-094304",
      "flatsCount": 3,
      "flats": [
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 1,
          "datetime": "2024-06-26T09:43:04.000Z",
          "temperature": "-10.5C",
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 2,
          "datetime": "2024-06-26T09:43:05.000Z",
          "temperature": "-10.0C",
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 3,
          "datetime": "2024-06-26T09:43:06.000Z",
          "temperature": "-10.5C",
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        }
      ],
      "darkSet": "Dark_120.0s_Bin1_L_gain0",
      "darksCount": 1,
      "darkTotalIntegrationMinutes": 2,
      "darks": [
        {
          "setName": "Dark_120.0s_Bin1_L_gain0",
          "type": "Dark",
          "bulb": "120.0s",
          "bulbMs": 120000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 0,
          "sequenceId": "20240308-155723",
          "sequencePosition": 1,
          "datetime": "2024-03-08T15:57:23.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_120.0s_Bin1_L_gain0_20240308-155723_-10.0C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_120.0s_Bin1_L_gain0_20240308-155723_-10.0C_0001.fit",
          "projectDirectory": "tmp/project/any/Dark_120.0s_Bin1_gain0"
        }
      ],
      "biasSet": "Bias_1.0ms_Bin1_gain100",
      "biasesCount": 3,
      "biases": [
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 1,
          "datetime": "2023-09-10T10:11:31.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 2,
          "datetime": "2023-09-10T10:11:32.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 3,
          "datetime": "2023-09-10T10:11:33.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        }
      ]
    },
    {
      "layerSetId": "Light_60.0s_Bin1_S_gain100__20240627-010820",
      "filter": "S",
      "lightSequences": [
        {
          "sequenceId": "20240627-010820",
          "count": 1,
          "integrationMinutes": 1
        }
      ],
      "lightTotalCount": 1,
      "lightTotalIntegrationMinutes": 1,
      "lights": [
        {
          "setName": "Light_60.0s_Bin1_S_gain100",
          "type": "Light",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240627-010820",
          "sequencePosition": 1,
          "datetime": "2024-06-27T01:08:20.000Z",
          "temperature": "-10.1C",
          "fileName": "Light_FOV_60.0s_Bin1_S_gain100_20240627-010820_-10.1C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Light/FOV",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Light/FOV/Light_FOV_60.0s_Bin1_S_gain100_20240627-010820_-10.1C_0001.fit",
          "projectDirectory": "tmp/project/S/Light_60.0s_Bin1_S_gain100"
        }
      ],
      "flatSet": "Flat_1.0ms_Bin1_S_gain100",
      "flatSequenceId": "20240626-094304",
      "flatsCount": 3,
      "flats": [
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 1,
          "datetime": "2024-06-26T09:43:04.000Z",
          "temperature": "-10.5C",
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 2,
          "datetime": "2024-06-26T09:43:05.000Z",
          "temperature": "-10.0C",
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        },
        {
          "setName": "Flat_1.0ms_Bin1_S_gain100",
          "type": "Flat",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": "S",
          "gain": 100,
          "sequenceId": "20240626-094304",
          "sequencePosition": 3,
          "datetime": "2024-06-26T09:43:06.000Z",
          "temperature": "-10.5C",
          "fileName": "Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/asiair-dump/Autorun/Flat",
          "sourceFilePath": "tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit",
          "projectDirectory": "tmp/project/S/Flat_1.0ms_Bin1_S_gain100"
        }
      ],
      "darkSet": "Dark_60.0s_Bin1_L_gain100",
      "darksCount": 4,
      "darkTotalIntegrationMinutes": 4,
      "darks": [
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 1,
          "datetime": "2024-03-08T15:57:22.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 2,
          "datetime": "2024-03-08T15:57:23.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 3,
          "datetime": "2024-03-08T15:57:24.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        },
        {
          "setName": "Dark_60.0s_Bin1_L_gain100",
          "type": "Dark",
          "bulb": "60.0s",
          "bulbMs": 60000,
          "bin": "Bin1",
          "filter": "L",
          "gain": 100,
          "sequenceId": "20240308-155722",
          "sequencePosition": 4,
          "datetime": "2024-03-08T15:57:25.000Z",
          "temperature": "-10.0C",
          "fileName": "Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Darks",
          "sourceFilePath": "tmp/bank/Darks/Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit",
          "projectDirectory": "tmp/project/any/Dark_60.0s_Bin1_gain100"
        }
      ],
      "biasSet": "Bias_1.0ms_Bin1_gain100",
      "biasesCount": 3,
      "biases": [
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 1,
          "datetime": "2023-09-10T10:11:31.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 2,
          "datetime": "2023-09-10T10:11:32.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        },
        {
          "setName": "Bias_1.0ms_Bin1_gain100",
          "type": "Bias",
          "bulb": "1.0ms",
          "bulbMs": 1,
          "bin": "Bin1",
          "filter": null,
          "gain": 100,
          "sequenceId": "20230910-101131",
          "sequencePosition": 3,
          "datetime": "2023-09-10T10:11:33.000Z",
          "temperature": "-9.8C",
          "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "extension": "fit",
          "sourceDirectory": "tmp/bank/Bias",
          "sourceFilePath": "tmp/bank/Bias/Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit",
          "projectDirectory": "tmp/project/any/Bias_1.0ms_Bin1_gain100"
        }
      ]
    }
  ]
}"
`;

exports[`E2E should be neat 4`] = `
"#############################################
#             _                  _      _ _ #
# _ __   ___ | |_ ___        ___(_)_ __(_) |#
#| '_ \\ / _ \\| __/ _ \\ _____/ __| | '__| | |#
#| |_) | (_) | || (_) |_____\\__ \\ | |  | | |#
#| .__/ \\___/ \\__\\___/      |___/_|_|  |_|_|#
#|_|                                        #
#############################################
# Adapted from the Cyril Richard Mono_Preprocessing v1.3 for poto-siril.

############################################
# 
# Variables:
#   biases: tmp/project/any/Bias_1.0ms_Bin1_gain100/
#   flats: tmp/project/H/Flat_1.0ms_Bin1_H_gain100/
#   darks: tmp/project/any/Dark_60.0s_Bin1_gain0/
#   lights: tmp/project/H/Light_60.0s_Bin1_H_gain0/
#   process: tmp/project/H/Light_60.0s_Bin1_H_gain0_process/
#   masters: tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/
#
############################################

requires 1.2.0

# Convert Bias Frames to .fit files
cd tmp/project/any/Bias_1.0ms_Bin1_gain100
convert bias -out=tmp/project/H/Light_60.0s_Bin1_H_gain0_process
cd tmp/project/H/Light_60.0s_Bin1_H_gain0_process

# Stack Bias Frames to bias_stacked.fit
stack bias rej 3 3 -nonorm -out=tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/bias_stacked

# Convert Flat Frames to .fit files
cd tmp/project/H/Flat_1.0ms_Bin1_H_gain100
convert flat -out=tmp/project/H/Light_60.0s_Bin1_H_gain0_process
cd tmp/project/H/Light_60.0s_Bin1_H_gain0_process

# Calibrate Flat Frames
calibrate flat -bias=tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/bias_stacked

# Stack Flat Frames to pp_flat_stacked.fit
stack pp_flat rej 3 3 -norm=mul -out=tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/pp_flat_stacked

# Convert Dark Frames to .fit files
cd tmp/project/any/Dark_60.0s_Bin1_gain0
convert dark -out=tmp/project/H/Light_60.0s_Bin1_H_gain0_process
cd tmp/project/H/Light_60.0s_Bin1_H_gain0_process

# Stack Dark Frames to dark_stacked.fit
stack dark rej 3 3 -nonorm -out=tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/dark_stacked

# Convert Light Frames to .fit files
cd tmp/project/H/Light_60.0s_Bin1_H_gain0
convert light -out=tmp/project/H/Light_60.0s_Bin1_H_gain0_process
cd tmp/project/H/Light_60.0s_Bin1_H_gain0_process

# Calibrate Light Frames
calibrate light -dark=tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/dark_stacked -flat=tmp/project/H/Light_60.0s_Bin1_H_gain0_masters/pp_flat_stacked -cc=dark

# Align Lights
register pp_light

close
"
`;

exports[`E2E should be neat 5`] = `
"#############################################
#             _                  _      _ _ #
# _ __   ___ | |_ ___        ___(_)_ __(_) |#
#| '_ \\ / _ \\| __/ _ \\ _____/ __| | '__| | |#
#| |_) | (_) | || (_) |_____\\__ \\ | |  | | |#
#| .__/ \\___/ \\__\\___/      |___/_|_|  |_|_|#
#|_|                                        #
#############################################
# Adapted from the Cyril Richard Mono_Preprocessing v1.3 for poto-siril.

############################################
# 
# Variables:
#   biases: tmp/project/any/Bias_1.0ms_Bin1_gain100/
#   flats: tmp/project/S/Flat_1.0ms_Bin1_S_gain100/
#   darks: tmp/project/any/Dark_120.0s_Bin1_gain0/
#   lights: tmp/project/S/Light_120.0s_Bin1_S_gain0/
#   process: tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process/
#   masters: tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/
#
############################################

requires 1.2.0

# Convert Bias Frames to .fit files
cd tmp/project/any/Bias_1.0ms_Bin1_gain100
convert bias -out=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process
cd tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process

# Stack Bias Frames to bias_stacked.fit
stack bias rej 3 3 -nonorm -out=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/bias_stacked

# Convert Flat Frames to .fit files
cd tmp/project/S/Flat_1.0ms_Bin1_S_gain100
convert flat -out=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process
cd tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process

# Calibrate Flat Frames
calibrate flat -bias=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/bias_stacked

# Stack Flat Frames to pp_flat_stacked.fit
stack pp_flat rej 3 3 -norm=mul -out=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/pp_flat_stacked

# Convert Dark Frames to .fit files
cd tmp/project/any/Dark_120.0s_Bin1_gain0
convert dark -out=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process
cd tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process

# Stack Dark Frames to dark_stacked.fit
stack dark rej 3 3 -nonorm -out=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/dark_stacked

# Convert Light Frames to .fit files
cd tmp/project/S/Light_120.0s_Bin1_S_gain0
convert light -out=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process
cd tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process

# Calibrate Light Frames
calibrate light -dark=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/dark_stacked -flat=tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_masters/pp_flat_stacked -cc=dark

# Align Lights
register pp_light

close
"
`;

exports[`E2E should be neat 6`] = `
"#############################################
#             _                  _      _ _ #
# _ __   ___ | |_ ___        ___(_)_ __(_) |#
#| '_ \\ / _ \\| __/ _ \\ _____/ __| | '__| | |#
#| |_) | (_) | || (_) |_____\\__ \\ | |  | | |#
#| .__/ \\___/ \\__\\___/      |___/_|_|  |_|_|#
#|_|                                        #
#############################################
# Adapted from the Cyril Richard Mono_Preprocessing v1.3 for poto-siril.

############################################
# 
# Variables:
#   biases: tmp/project/any/Bias_1.0ms_Bin1_gain100/
#   flats: tmp/project/S/Flat_1.0ms_Bin1_S_gain100/
#   darks: tmp/project/any/Dark_60.0s_Bin1_gain100/
#   lights: tmp/project/S/Light_60.0s_Bin1_S_gain100/
#   process: tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process/
#   masters: tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/
#
############################################

requires 1.2.0

# Convert Bias Frames to .fit files
cd tmp/project/any/Bias_1.0ms_Bin1_gain100
convert bias -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process
cd tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process

# Stack Bias Frames to bias_stacked.fit
stack bias rej 3 3 -nonorm -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/bias_stacked

# Convert Flat Frames to .fit files
cd tmp/project/S/Flat_1.0ms_Bin1_S_gain100
convert flat -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process
cd tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process

# Calibrate Flat Frames
calibrate flat -bias=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/bias_stacked

# Stack Flat Frames to pp_flat_stacked.fit
stack pp_flat rej 3 3 -norm=mul -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/pp_flat_stacked

# Convert Dark Frames to .fit files
cd tmp/project/any/Dark_60.0s_Bin1_gain100
convert dark -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process
cd tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process

# Stack Dark Frames to dark_stacked.fit
stack dark rej 3 3 -nonorm -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/dark_stacked

# Convert Light Frames to .fit files
cd tmp/project/S/Light_60.0s_Bin1_S_gain100
convert light -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process
cd tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process

# Calibrate Light Frames
calibrate light -dark=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/dark_stacked -flat=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_masters/pp_flat_stacked -cc=dark

# Align Lights
register pp_light

close
"
`;

exports[`E2E should be neat 7`] = `
"#############################################
#             _                  _      _ _ #
# _ __   ___ | |_ ___        ___(_)_ __(_) |#
#| '_ \\ / _ \\| __/ _ \\ _____/ __| | '__| | |#
#| |_) | (_) | || (_) |_____\\__ \\ | |  | | |#
#| .__/ \\___/ \\__\\___/      |___/_|_|  |_|_|#
#|_|                                        #
#############################################
# Adapted from the Cyril Richard Mono_Preprocessing v1.3 for poto-siril.

############################################
# 
# Variables:
#   biases: tmp/project/any/Bias_1.0ms_Bin1_gain100/
#   flats: tmp/project/S/Flat_1.0ms_Bin1_S_gain100/
#   darks: tmp/project/any/Dark_60.0s_Bin1_gain100/
#   lights: tmp/project/S/Light_60.0s_Bin1_S_gain100/
#   process: tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process/
#   masters: tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/
#
############################################

requires 1.2.0

# Convert Bias Frames to .fit files
cd tmp/project/any/Bias_1.0ms_Bin1_gain100
convert bias -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process
cd tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process

# Stack Bias Frames to bias_stacked.fit
stack bias rej 3 3 -nonorm -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/bias_stacked

# Convert Flat Frames to .fit files
cd tmp/project/S/Flat_1.0ms_Bin1_S_gain100
convert flat -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process
cd tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process

# Calibrate Flat Frames
calibrate flat -bias=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/bias_stacked

# Stack Flat Frames to pp_flat_stacked.fit
stack pp_flat rej 3 3 -norm=mul -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/pp_flat_stacked

# Convert Dark Frames to .fit files
cd tmp/project/any/Dark_60.0s_Bin1_gain100
convert dark -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process
cd tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process

# Stack Dark Frames to dark_stacked.fit
stack dark rej 3 3 -nonorm -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/dark_stacked

# Convert Light Frames to .fit files
cd tmp/project/S/Light_60.0s_Bin1_S_gain100
convert light -out=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process
cd tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process

# Calibrate Light Frames
calibrate light -dark=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/dark_stacked -flat=tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_masters/pp_flat_stacked -cc=dark

# Align Lights
register pp_light

close
"
`;

exports[`E2E should be neat 8`] = `
[
  "debug: Deleted: tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094306_-10.5C_0001_thn.jpg",
  "debug: Deleted: tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094307_-10.5C_0002_thn.jpg",
  "debug: Deleted: tmp/asiair-dump/Autorun/Flat/Flat_1.0ms_Bin1_H_gain100_20240511-094308_-10.5C_0003_thn.jpg",
  "info: Asiair dump cleaning - Thumbnails deleted ✅",
  "info: Deleted: tmp/asiair-dump/empty/empty",
  "info: Deleted: tmp/asiair-dump/empty",
  "info: Asiair dump cleaning - Empty dirs deleted ✅",
  "prompt: [{"type":"confirm","name":"createProjectDirectory","message":"Directory tmp/project does not exist. Do you want to create it?"}]",
  "step: Reading input directories",
  "debug: Skipping unknown file (Flat_1.0ms_Bin1_S_gain100_20240511-094306_-10.5C_0001.fot)",
  "info: Found 19 files in input dir(s) to dispatch.",
  "step: Matching lights and flats (early stage)",
  "warning: No matching light for Flat_1.0ms_Bin1_O_gain100 (seq 20240511-094306). Skipping.",
  "warning: No matching light for Flat_1.0ms_Bin2_S_gain100 (seq 20240511-094304). Skipping.",
  "info: Found 9 matching flats (3 sequences).",
  "step: Matching lights and flats (final stage)",
  "info: 🤚 Several sequences found for flat set Flat_1.0ms_Bin1_S_gain100:",
  "info: - 20240624-094304
- 20240626-094304",
  "debug: We assume that multiple sequences of the same flat set indicate multiple night sessions where the flats had to be re-shot in between (e.g., a significant date gap between shooting sessions and the lights were not collected with the same collimation and/or same dust in the optical train).",
  "info: We will ask you to tag each concerned light sequence to the right flat sequence.",
  "prompt: [{"type":"select","name":"selectedFlatSequence","message":"\\u001b[38;2;0;31;63mLight_\\u001b[39m\\u001b[38;2;0;63;92m60.0s\\u001b[39m_\\u001b[38;2;47;75;124mBin1\\u001b[39m\\u001b[38;2;102;81;145m_S_\\u001b[39m\\u001b[38;2;160;81;149mgain100\\u001b[39m \\u001b[38;2;212;80;135m2024\\u001b[39m\\u001b[38;2;249;93;106m06\\u001b[39m\\u001b[38;2;255;124;67m24\\u001b[39m-\\u001b[38;2;255;166;0m01\\u001b[39m\\u001b[38;2;255;176;0m08\\u001b[39m\\u001b[38;2;255;192;0m40\\u001b[39m will use","choices":[{"name":"Flat_1.0ms_Bin1_S_gain100__20240624-094304","message":"\\u001b[38;2;0;31;63mFlat_\\u001b[39m\\u001b[38;2;0;63;92m1.0ms\\u001b[39m_\\u001b[38;2;47;75;124mBin1\\u001b[39m\\u001b[38;2;102;81;145m_S_\\u001b[39m\\u001b[38;2;160;81;149mgain100\\u001b[39m \\u001b[38;2;212;80;135m2024\\u001b[39m\\u001b[38;2;249;93;106m06\\u001b[39m\\u001b[38;2;255;124;67m24\\u001b[39m-\\u001b[38;2;255;166;0m09\\u001b[39m\\u001b[38;2;255;176;0m43\\u001b[39m\\u001b[38;2;255;192;0m04\\u001b[39m"},{"name":"Flat_1.0ms_Bin1_S_gain100__20240626-094304","message":"\\u001b[38;2;0;31;63mFlat_\\u001b[39m\\u001b[38;2;0;63;92m1.0ms\\u001b[39m_\\u001b[38;2;47;75;124mBin1\\u001b[39m\\u001b[38;2;102;81;145m_S_\\u001b[39m\\u001b[38;2;160;81;149mgain100\\u001b[39m \\u001b[38;2;212;80;135m2024\\u001b[39m\\u001b[38;2;249;93;106m06\\u001b[39m\\u001b[38;2;255;124;67m26\\u001b[39m-\\u001b[38;2;255;166;0m09\\u001b[39m\\u001b[38;2;255;176;0m43\\u001b[39m\\u001b[38;2;255;192;0m04\\u001b[39m"}]}]",
  "prompt: [{"type":"select","name":"selectedFlatSequence","message":"\\u001b[38;2;0;31;63mLight_\\u001b[39m\\u001b[38;2;0;63;92m120.0s\\u001b[39m_\\u001b[38;2;47;75;124mBin1\\u001b[39m\\u001b[38;2;102;81;145m_S_\\u001b[39m\\u001b[38;2;160;81;149mgain0\\u001b[39m \\u001b[38;2;212;80;135m2024\\u001b[39m\\u001b[38;2;249;93;106m06\\u001b[39m\\u001b[38;2;255;124;67m26\\u001b[39m-\\u001b[38;2;255;166;0m01\\u001b[39m\\u001b[38;2;255;176;0m08\\u001b[39m\\u001b[38;2;255;192;0m53\\u001b[39m will use","choices":[{"name":"Flat_1.0ms_Bin1_S_gain100__20240624-094304","message":"\\u001b[38;2;0;31;63mFlat_\\u001b[39m\\u001b[38;2;0;63;92m1.0ms\\u001b[39m_\\u001b[38;2;47;75;124mBin1\\u001b[39m\\u001b[38;2;102;81;145m_S_\\u001b[39m\\u001b[38;2;160;81;149mgain100\\u001b[39m \\u001b[38;2;212;80;135m2024\\u001b[39m\\u001b[38;2;249;93;106m06\\u001b[39m\\u001b[38;2;255;124;67m24\\u001b[39m-\\u001b[38;2;255;166;0m09\\u001b[39m\\u001b[38;2;255;176;0m43\\u001b[39m\\u001b[38;2;255;192;0m04\\u001b[39m"},{"name":"Flat_1.0ms_Bin1_S_gain100__20240626-094304","message":"\\u001b[38;2;0;31;63mFlat_\\u001b[39m\\u001b[38;2;0;63;92m1.0ms\\u001b[39m_\\u001b[38;2;47;75;124mBin1\\u001b[39m\\u001b[38;2;102;81;145m_S_\\u001b[39m\\u001b[38;2;160;81;149mgain100\\u001b[39m \\u001b[38;2;212;80;135m2024\\u001b[39m\\u001b[38;2;249;93;106m06\\u001b[39m\\u001b[38;2;255;124;67m26\\u001b[39m-\\u001b[38;2;255;166;0m09\\u001b[39m\\u001b[38;2;255;176;0m43\\u001b[39m\\u001b[38;2;255;192;0m04\\u001b[39m"}]}]",
  "prompt: [{"type":"select","name":"selectedFlatSequence","message":"\\u001b[38;2;0;31;63mLight_\\u001b[39m\\u001b[38;2;0;63;92m60.0s\\u001b[39m_\\u001b[38;2;47;75;124mBin1\\u001b[39m\\u001b[38;2;102;81;145m_S_\\u001b[39m\\u001b[38;2;160;81;149mgain100\\u001b[39m \\u001b[38;2;212;80;135m2024\\u001b[39m\\u001b[38;2;249;93;106m06\\u001b[39m\\u001b[38;2;255;124;67m27\\u001b[39m-\\u001b[38;2;255;166;0m01\\u001b[39m\\u001b[38;2;255;176;0m08\\u001b[39m\\u001b[38;2;255;192;0m20\\u001b[39m will use","choices":[{"name":"Flat_1.0ms_Bin1_S_gain100__20240624-094304","message":"\\u001b[38;2;0;31;63mFlat_\\u001b[39m\\u001b[38;2;0;63;92m1.0ms\\u001b[39m_\\u001b[38;2;47;75;124mBin1\\u001b[39m\\u001b[38;2;102;81;145m_S_\\u001b[39m\\u001b[38;2;160;81;149mgain100\\u001b[39m \\u001b[38;2;212;80;135m2024\\u001b[39m\\u001b[38;2;249;93;106m06\\u001b[39m\\u001b[38;2;255;124;67m24\\u001b[39m-\\u001b[38;2;255;166;0m09\\u001b[39m\\u001b[38;2;255;176;0m43\\u001b[39m\\u001b[38;2;255;192;0m04\\u001b[39m"},{"name":"Flat_1.0ms_Bin1_S_gain100__20240626-094304","message":"\\u001b[38;2;0;31;63mFlat_\\u001b[39m\\u001b[38;2;0;63;92m1.0ms\\u001b[39m_\\u001b[38;2;47;75;124mBin1\\u001b[39m\\u001b[38;2;102;81;145m_S_\\u001b[39m\\u001b[38;2;160;81;149mgain100\\u001b[39m \\u001b[38;2;212;80;135m2024\\u001b[39m\\u001b[38;2;249;93;106m06\\u001b[39m\\u001b[38;2;255;124;67m26\\u001b[39m-\\u001b[38;2;255;166;0m09\\u001b[39m\\u001b[38;2;255;176;0m43\\u001b[39m\\u001b[38;2;255;192;0m04\\u001b[39m"}]}]",
  "space: ",
  "info: 👉 Light - Flat matching summary:",
  "debug: - Light_60.0s_Bin1_H_gain0 20240625-010850 🏹 Flat_1.0ms_Bin1_H_gain100 20240511-094306",
  "debug: - Light_60.0s_Bin1_S_gain100 20240624-010840 🏹 Flat_1.0ms_Bin1_S_gain100 20240624-094304",
  "debug: - Light_120.0s_Bin1_S_gain0 20240626-010853 🏹 Flat_1.0ms_Bin1_S_gain100 20240626-094304",
  "debug: - Light_60.0s_Bin1_S_gain100 20240627-010820 🏹 Flat_1.0ms_Bin1_S_gain100 20240626-094304",
  "step: Tagging darks and biases",
  "info: Found 14 files in the bank.",
  "step: Preview before dispatching",
  "info: 🔭 Cumulated light integration: 9 minutes.",
  "info: 📦 Project size: 8 lights, 10 darks, 12 flats, 12 biases.",
  "space: ",
  "info: 🌌 Layer sets:",
  "debug: - Light_60.0s_Bin1_H_gain0 has 3 lights, 1 darks, 3 flats, 3 biases.",
  "debug: - Light_60.0s_Bin1_S_gain100__20240624-010840 has 3 lights, 4 darks, 3 flats, 3 biases.",
  "debug: - Light_120.0s_Bin1_S_gain0__20240626-010853 has 1 lights, 1 darks, 3 flats, 3 biases.",
  "debug: - Light_60.0s_Bin1_S_gain100__20240627-010820 has 1 lights, 4 darks, 3 flats, 3 biases.",
  "space: ",
  "prompt: [{"type":"confirm","name":"go","message":"Do you want to proceed with the dispatch?"}]",
  "step: Dispatching",
  "debug: - Light_FOV_60.0s_Bin1_H_gain0_20240625-010850_-10.1C_0001.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_H_gain0_20240625-010851_-10.1C_0002.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_H_gain0_20240625-010852_-10.1C_0003.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_gain0_20240308-155722_-10.0C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_H_gain100_20240511-094306_-10.5C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_H_gain100_20240511-094307_-10.5C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_H_gain100_20240511-094308_-10.5C_0003.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_S_gain100_20240624-010840_-10.1C_0001.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_S_gain100_20240624-010841_-10.1C_0002.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_S_gain100_20240624-010842_-10.1C_0003.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240624-094304_-10.5C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240624-094305_-10.0C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240624-094306_-10.5C_0003.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit dispatched.",
  "debug: - Light_FOV_120.0s_Bin1_S_gain0_20240626-010853_-10.1C_0001.fit dispatched.",
  "debug: - Dark_120.0s_Bin1_L_gain0_20240308-155723_-10.0C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit dispatched.",
  "debug: - Light_FOV_60.0s_Bin1_S_gain100_20240627-010820_-10.1C_0001.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155722_-10.0C_0001.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155723_-10.0C_0002.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155724_-10.0C_0003.fit dispatched.",
  "debug: - Dark_60.0s_Bin1_L_gain100_20240308-155725_-10.0C_0004.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094304_-10.5C_0001.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094305_-10.0C_0002.fit dispatched.",
  "debug: - Flat_1.0ms_Bin1_S_gain100_20240626-094306_-10.5C_0003.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101132_-9.8C_0002.fit dispatched.",
  "debug: - Bias_1.0ms_Bin1_gain100_20230910-101133_-9.8C_0003.fit dispatched.",
  "success: Dispatch complete.",
  "debug: directories [object Object]",
  "info: dirs [object Object]",
  "info: Generated tmp/project/H/Light_60.0s_Bin1_H_gain0_process/poto_1_preprocessing.ssf [object Object]",
  "debug: directories [object Object]",
  "info: dirs [object Object]",
  "info: Generated tmp/project/S/Light_60.0s_Bin1_S_gain100__20240624-010840_process/poto_1_preprocessing.ssf [object Object]",
  "debug: directories [object Object]",
  "info: dirs [object Object]",
  "info: Generated tmp/project/S/Light_120.0s_Bin1_S_gain0__20240626-010853_process/poto_1_preprocessing.ssf [object Object]",
  "debug: directories [object Object]",
  "info: dirs [object Object]",
  "info: Generated tmp/project/S/Light_60.0s_Bin1_S_gain100__20240627-010820_process/poto_1_preprocessing.ssf [object Object]",
  "success: Scripts were generated ✅.",
]
`;
